--- a/shippable.yml
+++ b/shippable.yml
@@ -1,15 +1,15 @@
 language: php
 
-php:
+build_image: drydock/u12phpall:tip
+
+php: 
   - 5.4
   - 5.5
   - 5.6
-  - 7.0
+  - '7.0'
 
 services:
   - mysql
-  
-build_image: drydock/u12phpall:tip
 
 addons:
   hosts:
@@ -18,6 +18,7 @@ addons:
 before_script:
   - sudo apt-get update
   - sudo apt-get install nginx
+  - addgroup nobody
   - sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf
   - ~/.phpenv/versions/$(phpenv version-name)/sbin/php-fpm
   - sudo cp -f config/site-nginx.conf /etc/nginx/sites-enabled/site-nginx.conf
